Configuración de Dockerfiles y Docker-Compose, para conexión de los clientes al servidor